--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>E-commerce Homepage Design</title>
-    </head>
-
-    <body>
-      <div id="root"></div>
-      <script type="module" src="./src/main.tsx"></script>
-    </body>
-  </html>
-  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shopping Addaa</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- ✅ Correct: Vite replaces this with built JS -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
