Fix: Vercel deployment issue with base path

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopping Addaa</title>
+    <title>E-commerce Homepage Design</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ Correct: Vite replaces this with built JS -->
+    <!-- 👇 ye sahi hai -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
