Fix: vite base path and vercel config

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce Homepage Design</title>
+    <title>Shopping Adda</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- 👇 ye sahi hai -->
+    <!-- ⚡️ Vite automatically replaces this with dist/assets/index-xxxx.js -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
